Fix weird spacing

--- a/components/HomePageButton/HomePageButton.module.scss
+++ b/components/HomePageButton/HomePageButton.module.scss
@@ -5,11 +5,10 @@ a.container {
   max-width: 768px;
   background-repeat: no-repeat;
   border-radius: 15px;
-  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 1.75rem 0;
+  margin: 1.75rem;
   font-size: $text-xxl;
   font-family: $font-primary;
   font-weight: 500;
