--- a/styles/modules/nav.module.scss
+++ b/styles/modules/nav.module.scss
@@ -42,12 +42,8 @@ ul.menu {
   justify-content: center;
   gap: 1.5rem;
   flex-wrap: wrap;
-
-  @include for-tablet-up {
-    gap: 3rem;
-    flex-wrap: nowrap;
-    justify-content: right;
-  }
+  padding: 0;
+  margin: 0;
 }
 
 ul.menu li {
@@ -67,14 +63,6 @@ ul.menu li {
 
   a:hover {
     color: $blue-lighter;
-  }
-}
-
-.menuButton {
-  margin-left: -0.5rem;
-
-  @include for-tablet-up {
-    margin-left: -2rem;
   }
 }
 
